--- a/src/README
+++ b/src/README
@@ -1,14 +1,14 @@
 关于JAVA中的23中设计模式
 1.单例模式（Singleton Pattern）
-2.工厂模式
+2.工厂模式（Factory Pattern）
 3.抽象工厂模式（Abstract Factory Pattern）
 4.模板方法模式（Template Method Pattern）
 5.建造者模式（Builder Pattern）
 6.代理模式（Proxy Pattern）
 7.原型模式（Prototype Pattern）
-8.中介者模式
-9.命令模式
-10.责任链模式
+8.中介者模式（Broker Pattern）
+9.命令模式 （Command Pattern）
+10.责任链模式 (Responsibility  Patten)
 11.装饰模式（Decorator Pattern）
 12.策略模式（Strategy Pattern）
 13.适配器模式（Adapter Pattern）
@@ -18,7 +18,7 @@
 17.门面模式（Facade Pattern）
 18.备忘录模式（Memento Pattern）
 19.访问者模式（Visitor Pattern）
-20.状态模式（复杂）
+20.状态模式 （State Pattern）（复杂）
 21.解释器模式（Interpreter Pattern）（少用）
 22.享元模式（Flyweight Pattern）
 23.桥梁模式（Bridge Pattern）
